[package]
name = "rustvault"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"

# Enable derive for Serialize / Deserialize
serde = { version = "1.0.228", features = ["derive"] }

# No features needed here
serde_json = "1.0.145"

clap = { version = "4", features = ["derive"] }
directories = "5.0"
rpassword = "7.4"
argon2 = "0.5.3"
rand = "0.9.2"
base64 = "0.22.1"
aes-gcm = "0.10.3"

